--- a/index.html
+++ b/index.html
@@ -133,24 +133,22 @@
                 <p>Get limited 1 week free to try our features!</p>
             </div>
             <div class="footer__btn">
-                <button class="btn btn__footer" href="#">Learn more</button>
+                <button class="btn btn__learn-more" href="#">Learn more</button>
                 <button class="btn btn__request-demo" href="#">Request Demo<img class="btn__arrow"
                         src="./images/arrow.svg" alt=""></button>
             </div>
         </div>
         <div class="footer__bottom">
             <div class="footer__information">
-                <div class="footer__information">
-                    <a class="footer__logo" href="index.html">
-                        <img src="./images/logo.svg" alt="DW Logo">DataWarehouse</a>
-                    <p class="footer__address">
-                        Warehouse Society, 234
-                        <br>
-                        Bahagia Ave Street PRBW 29281
-                    </p>
-                    <a href="mailto:info@warehouse.project" class="footer__contact--email">info@warehouse.project</a>
-                    <a href="tel:+12323434" class="footer__contact--phone">1-232-3434 (Main)</a>
-                </div>
+                <a class="footer__logo" href="index.html">
+                    <img src="./images/logo.svg" alt="DW Logo">DataWarehouse</a>
+                <p class="footer__address">
+                    Warehouse Society, 234
+                    <br>
+                    Bahagia Ave Street PRBW 29281
+                </p>
+                <a href="mailto:info@warehouse.project" class="footer__contact--email">info@warehouse.project</a>
+                <a href="tel:+12323434" class="footer__contact--phone">1-232-3434 (Main)</a>
             </div>
             <div class="footer__nav">
                 <div class="footer__nav--about">
