--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Avenir&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Helvetica&display=swap">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>HTML & CSS Exercise</title>
 </head>
 
@@ -27,7 +27,7 @@
                     <li class="nav__item"><a class="nav__link" href="#">Signup</a></li>
                 </ul>
             </nav>
-            <button class="btn header__btn-request-demo btn__request-demo" href="#">Request Demo<img class="btn__arrow"
+            <button class="btn header__btn-request-demo btn__request-demo-header" href="#">Request Demo<img class="btn__arrow"
                     src="./images/arrow.svg" alt=""></button>
         </div>
         <div class="header__banner">
@@ -134,7 +134,7 @@
             </div>
             <div class="footer__btn">
                 <button class="btn btn__learn-more" href="#">Learn more</button>
-                <button class="btn btn__request-demo" href="#">Request Demo<img class="btn__arrow"
+                <button class="btn btn__request-demo-footer" href="#">Request Demo<img class="btn__arrow"
                         src="./images/arrow.svg" alt=""></button>
             </div>
         </div>
@@ -183,4 +183,4 @@
     </footer>
 </body>
 
-</html>`
+</html>
